sfdx-source/force-app/main/default/objects/Notifier_Event_Binding__mdt/Notifier_Event_Binding__mdt.object-meta.xml
<CustomObject>
    <description>LEM-1584: To store mapping of factory classes.</description>
    <label>Notifier Event Binding</label>
    <pluralLabel>Notifier Event Bindings</pluralLabel>
</CustomObject>