sfdx-source/force-app/main/default/objects/Notifier_Event_Binding__mdt/fields/Partition_Key__c.field-meta.xml
<CustomField>
    <fullName>Partition_Key__c</fullName>
    <description>LEM-24197 : It stores the Partition Key for the topic.</description>
    <label>Partition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>