sfdx-source/force-app/main/default/objects/Notifier_Event_Binding__mdt/fields/Platform_Event_Channel__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Channel__c</fullName>
    <description>LEM-24197: It stores the Platform Event Channel to utilize for processing a particular topic related payload.</description>
    <label>Platform Event Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>