sfdx-source/force-app/main/default/objects/Notifier_Event_Binding__mdt/fields/Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Scope_Size__c</fullName>
    <description>LEM-1584: To store the default execution scope size.</description>
    <label>Scope Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>